# shtats

./: .envrc  .gitignore  CNAME  Cargo.toml  Makefile  NOTES.md  README.md  codecov.yml  package-lock.json  package.json
.github/workflows/: codeql-analysis.yml  mega-linter.yml  rust.yml
docs/: index.html  stats.html  usage.html
docs/css/: shtats.css
pages/css/: shtats.css
report/html/: index.html  package-lock.json  package.json
report/html/.storybook/: main.js
report/html/components/: Summary.jsx  something.js
report/html/static/: shtats.css
report/html/stories/: Lines.stories.jsx  LinesAddedDeleted.stories.jsx  LinesAddedDeletedByLanguage.stories.jsx  LinesAddedDeletedSummary.stories.jsx  LinesAddedDeletedSummaryTable.stories.jsx  LinesCollection.stories.jsx  Punchcard.stories.jsx  Summary.stories.jsx  (+4 more)
scripts/: repo_size_estimate.py  take-screenshot.js  test_with_coverage.sh  update-screenshot.sh
spikes/: full-height-shell-with-left-menu.html  full-height-shell.html  packed-circles.html  site.css
src/: cli.rs  collectors.rs  config.rs  duplicates.rs  errors.rs  html.rs  lib.rs  main.rs  models.rs  output.rs  parsers.rs  process.rs  reporter.rs  result.rs  stats.rs  viewmodel.rs
src/collectors/: commits_by_day.rs  commits_by_file_extension.rs  files_by_commits.rs  files_by_day.rs  files_by_lines.rs  lines_by_average.rs  lines_by_average_by_file_extension.rs  lines_by_day.rs  messages.rs  punch_card.rs  similar_files.rs  summary_stats.rs  user_summary.rs
src/includes/: report.html
tests/: common.rs  integration_test.rs  output_error.sh
(+25 files in other folders)
