[package]
name = "shtats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ramhorns = "0.5"
chrono = "0.4"
bytesize = {version = "1.1.0", features = ["serde"]}
meowhash = "0.3.0"
itertools = "0.10.2"
clap = { version = "3.1.0", features = ["derive"] }
git-version = "0.3.5"
indicatif = "0.16.2"
serde = "1.0.136"
serde_json = "1.0.79"
md5 = "0.7.0"


[dev-dependencies]
tempdir = "0.3"
uuid = { version = "0.8", features = ["v4"] }
mockall = "0.11.1"